--- a/postavi-oglas.html
+++ b/postavi-oglas.html
@@ -27,8 +27,8 @@
             <ul class="navbar">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="index.html#poslednje">Poslednje dodato</a></li>
-                <li><a href="index.html#registracija">Registracija</a></li>
-                <li><a href="index.html#prijava">Prijava</a></li>
+                <li><a href="registracija.php">Registracija</a></li>
+                <li><a href="prijava.php">Prijava</a></li>
                 <li><a href="index.html#kontakt">Kontakt</a></li>
                 <li><a href="profil.html">Profil</a></li>
                 <li><a href="postavi-oglas.html">Postavi Oglas</a></li>
@@ -835,8 +835,8 @@
                     <h3>Korisni linkovi</h3>
                     <a href="#home">Home</a>
                     <a href="#poslednje">Popularno</a>
-                    <a href="#registracija">Registracija</a>
-                    <a href="#prijava">Prijava</a>
+                    <a href="registracija.php">Registracija</a>
+                    <a href="prijava.php">Prijava</a>
                     <a href="#Kontakt">Kontakt</a>
                 </div>
                 <div class="col-2">
