--- a/template.html
+++ b/template.html
@@ -25,8 +25,8 @@
                 <ul class="navbar">
 					<li><a href="#home">Home</a></li>
                     <li><a href="#poslednje">Poslednje dodato</a></li>
-                    <li><a href="#registracija">Registracija</a></li>
-                    <li><a href="#prijava">Prijava</a></li>
+                    <li><a href="registracija.php">Registracija</a></li>
+                    <li><a href="prijava.php">Prijava</a></li>
                     <li><a href="#kontakt">Kontakt</a></li>
                 </ul>
                 <i class='bx bx-search' id="search-icon" onclick="showDiv('search-box')""></i>
