--- a/again/oglas2.html
+++ b/again/oglas2.html
@@ -24,7 +24,7 @@
                     <li><a href="#">Početna</a></li>
                     <li><a href="#">Pretraga</a></li>
                     <li><a href="#">Vesti</a></li>
-                    <li><a href="login.html" class="login-btn">Prijavi se</a></li>
+                    <li><a href="login.php" class="login-btn">Prijavi se</a></li>
                 </ul>
             </nav>
         </header>
@@ -161,7 +161,7 @@
                 <div class="contact-info">
                     <a href="#">Oglasi</a>
                     <a href="#">Cene</a>
-                    <a href="login.html" class="login-btn">Prijavi se</a>
+                    <a href="login.php" class="login-btn">Prijavi se</a>
                 </div>
                 <div class="contact-sections">
                     <div class="contact-section">
